--- a/index.html
+++ b/index.html
@@ -19,8 +19,15 @@
             <p class="apresentacao__conteudo__paragrafo">Depois do acidente tenho uma frase que levo sempre na minha vida:</p>
             <p class="apresentacao__conteudo__paragrafo"><strong>  SE VOCÊ PODE SONHA-LO VOCÊ PODE FAZE-LO.</strong></p>
             <div class="apresentacao__conteudo__links">
-                <a class="apresentacao__conteudo__link" href="https://www.linkedin.com/in/joaocandidos/">Linkdin</a>
-                <a class="apresentacao__conteudo__link"  href="https://github.com/joaobcandido">Github</a>
+                <h2 class="apresentacao__conteudo__links__subtitulo">Acesse minhas redes:</h2>
+                <a class="apresentacao__conteudo__links__link" href="https://www.linkedin.com/in/joaocandidos/">
+                    <img src="img/linkedin.png" alt="linkedin">
+                    Linkdin
+                </a>
+                <a class="apresentacao__conteudo__links__link"  href="https://github.com/joaobcandido">
+                    <img src="img/github.png" alt="github">
+                    Github
+                </a>
             </div>
             
         </section>
