--- a/index.html
+++ b/index.html
@@ -33,7 +33,9 @@
         </section>
         <img class="foto" src="img/foto.jpg" alt="foto do joao candido">
     </main>
-    <footer></footer>
+    <footer>
+        <p class="rodape">Desenvolvido por João Candido</p>
+    </footer>
     
 </body>
 </html>
