separating the project into folders

--- a/index.html
+++ b/index.html
@@ -4,37 +4,43 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portifolio</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="./styles/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Chonburi&display=swap" rel="stylesheet">
 </head>
 <body>
-    <header></header>
+    <header class="cabecalho">
+        <nav class="cabecalho__menu">
+            <a class="cabecalho__menu__link" href="index.html">Home</a>
+            <a class="cabecalho__menu__link" href="about.html">Sobre mim</a>
+        </nav> 
+    </header>
     <main class="apresentacao">
         <section class="apresentacao__conteudo">
-            <h1 class="apresentacao__conteudo__titulo">Sobre mim ?</h1>
-            <p class="apresentacao__conteudo__paragrafo">Hi, I'm João Cândido PCD ♿ </p>
-            <p class="apresentacao__conteudo__paragrafo">Eu era um agricultor familiar e com 39 anos sofri um acidente de moto e tive a amputação do pé direito no processo de recuperação conheci uma faculdade publica do Estado de São Paulo UNIVESP e comecei meu curso universitário , com 45 anos concluí o curso de Bacharelado em Engenharia de Computação.</p>
+            <h1 class="apresentacao__conteudo__titulo">Apresentação</h1>
+            <p class="apresentacao__conteudo__paragrafo"></p>
+            <p class="apresentacao__conteudo__paragrafo">Tenho 46 anos</p>
             <p class="apresentacao__conteudo__paragrafo">Depois do acidente tenho uma frase que levo sempre na minha vida:</p>
             <p class="apresentacao__conteudo__paragrafo"><strong>  SE VOCÊ PODE SONHA-LO VOCÊ PODE FAZE-LO.</strong></p>
+            <p>em construção ...............</p>
             <div class="apresentacao__conteudo__links">
                 <h2 class="apresentacao__conteudo__links__subtitulo">Acesse minhas redes:</h2>
                 <a class="apresentacao__conteudo__links__link" href="https://www.linkedin.com/in/joaocandidos/">
-                    <img src="img/linkedin.png" alt="linkedin">
+                    <img src="./assets/linkedin.png" alt="linkedin">
                     Linkdin
                 </a>
                 <a class="apresentacao__conteudo__links__link"  href="https://github.com/joaobcandido">
-                    <img src="img/github.png" alt="github">
+                    <img src="./assets/github.png" alt="github">
                     Github
                 </a>
             </div>
             
         </section>
-        <img class="foto" src="img/foto.jpg" alt="foto do joao candido">
+        <img class="foto" src="./assets/foto.jpg" alt="foto do joao candido">
     </main>
-    <footer>
-        <p class="rodape">Desenvolvido por João Candido</p>
+    <footer class="rodape">
+        <p>Desenvolvido por João Candido</p>
     </footer>
     
 </body>
