--- a/about.html
+++ b/about.html
@@ -18,6 +18,7 @@
             <h1 class="apresentacao__conteudo__titulo">Quem sou eu ?</h1>
             <p class="apresentacao__conteudo__paragrafo">Olá, sou o João Cândido PCD ♿ </p>
             <p class="apresentacao__conteudo__paragrafo">Eu era um agricultor familiar e com 39 anos sofri um acidente de moto e tive a amputação do pé direito no processo de recuperação conheci uma faculdade publica do Estado de São Paulo UNIVESP e comecei meu curso universitário , com 45 anos concluí o curso de Bacharelado em Engenharia de Computação.</p>
+            <p class="apresentacao__conteudo__paragrafo">Depois do acidente tenho uma frase que levo sempre na minha vida:<strong>  SE VOCÊ PODE SONHA-LO VOCÊ PODE FAZE-LO.</strong></section>
         </section>
         <img class="foto" src="./assets/foto.jpg" alt="foto do joao candido">
     </main>
