--- a/index.html
+++ b/index.html
@@ -18,12 +18,9 @@
     </header>
     <main class="apresentacao">
         <section class="apresentacao__conteudo">
-            <h1 class="apresentacao__conteudo__titulo">Apresentação</h1>
-            <p class="apresentacao__conteudo__paragrafo"></p>
-            <p class="apresentacao__conteudo__paragrafo">Tenho 46 anos</p>
-            <p class="apresentacao__conteudo__paragrafo">Depois do acidente tenho uma frase que levo sempre na minha vida:</p>
-            <p class="apresentacao__conteudo__paragrafo"><strong>  SE VOCÊ PODE SONHA-LO VOCÊ PODE FAZE-LO.</strong></p>
+            <h1 class="apresentacao__conteudo__titulo">Apresentação dos projetos de estudo</h1>
             <p>em construção ...............</p>
+            
             <div class="apresentacao__conteudo__links">
                 <h2 class="apresentacao__conteudo__links__subtitulo">Acesse minhas redes:</h2>
                 <a class="apresentacao__conteudo__links__link" href="https://www.linkedin.com/in/joaocandidos/">
