--- a/index.html
+++ b/index.html
@@ -19,7 +19,13 @@
     <main class="apresentacao2">
         <div class="apresentacao2__conteudo">
             <h1 class="apresentacao__conteudo__titulo">Apresentação dos projetos de estudo</h1>
-            <p class="construcao">em construção ...............</p>
+            <div class="container">
+                <div class="projetos">html/css</div>
+                <div class="projetos">c#</div>
+                <div class="projetos">python</div>
+                <div class="projetos">js</div>
+                
+            </div>
         </div>  
         <div class="apresentacao__conteudo__links">
                 <h2 class="apresentacao__conteudo__links__subtitulo">Acesse minhas redes:</h2>
