added print of projects

--- a/index.html
+++ b/index.html
@@ -20,10 +20,19 @@
         <div class="apresentacao2__conteudo">
             <h1 class="apresentacao__conteudo__titulo">Apresentação dos projetos de estudo</h1>
             <div class="container">
-                <div class="projetos">html/css</div>
-                <div class="projetos">c#</div>
-                <div class="projetos">python</div>
-                <div class="projetos">js</div>
+                <div class="projetos">
+                    <img class="tamanho__foto" src="assets/tabuada_for.png" alt="">
+                </div>
+                <div class="projetos">
+                    <img class="tamanho__foto" src="assets/tabuada_for.png" alt="">
+                </div>
+                <div class="projetos">
+                    <img class="tamanho__foto" src="assets/tabuada_for.png" alt="">
+                </div>
+                <div class="projetos">
+                    <img class="tamanho__foto" src="assets/tabuada_for.png" alt="">
+                </div>
+                
                 
             </div>
         </div>  
