--- a/index.html
+++ b/index.html
@@ -32,8 +32,20 @@
                 <div class="projetos">
                     <img class="tamanho__foto" src="assets/tabuada_for.png" alt="">
                 </div>
-                
-                
+            </div>
+            <div class="container">
+                <div class="projetos">
+                    <img class="tamanho__foto" src="assets/tabuada_for.png" alt="">
+                </div>
+                <div class="projetos">
+                    <img class="tamanho__foto" src="assets/tabuada_for.png" alt="">
+                </div>
+                <div class="projetos">
+                    <img class="tamanho__foto" src="assets/tabuada_for.png" alt="">
+                </div>
+                <div class="projetos">
+                    <img class="tamanho__foto" src="assets/tabuada_for.png" alt="">
+                </div>
             </div>
         </div>  
         <div class="apresentacao__conteudo__links">
