--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <h1 class="apresentacao__conteudo__titulo">Apresentação dos projetos de estudo</h1>
             <div class="container">
                 <div class="projetos">
-                    <img class="tamanho__foto" src="assets/jogo-numero-secreto.png" alt="">
+                    <img class="tamanho__foto" src="assets/jogo-ia.png" alt="">
                 </div>
                 <div class="projetos">
                     <img class="tamanho__foto" src="assets/tabuada_for.png" alt="">
