--- a/about.html
+++ b/about.html
@@ -17,9 +17,21 @@
         <section class="apresentacao__conteudo">
             <h1 class="apresentacao__conteudo__titulo">Quem sou eu ?</h1>
             <p class="apresentacao__conteudo__paragrafo">Olá, sou o João Cândido tenho 46 anos e sou PCD. ♿</p>
+
             <p class="apresentacao__conteudo__paragrafo">Eu era um agricultor familiar e com 39 anos sofri um acidente de moto e tive a amputação do pé direito, no processo de recuperação conheci uma faculdade pública do Estado de São Paulo UNIVESP e comecei meu curso universitário, com 45 anos concluí o curso de Bacharelado em Engenharia de Computação.</p>
+
+            <p class="apresentacao__conteudo__paragrafo">
+                Tive meu primeiro emprego na area de TI como desenvolvedor Back end na linguagem de programação golang com 45 anos em uma multinacional ,onde participava de uma equipe no Uruguay e com isso aprendi um pouco do idioma casteliano.
+            </p>
+            
+            <p class="apresentacao__conteudo__paragrafo">Quando estava na faculdade desenvolvi um projeto(startup) chamada LOW TECK BIONICS onde desenvolvi uma protese eletrica de baixo custo 90% impressa em 3d. Com esse projeto fiquei em terceiro lugar no concurso Santander Universidades.</p>
+
+            <p class="apresentacao__conteudo__paragrafo">
+                No meu tempo livre gosto de praticar exercicios ao ar livre como andar de bicicleta por exemplo. Tambem gosto de assistir filmes de natal.
+            </p>
+            
             <p class="apresentacao__conteudo__paragrafo">Depois do acidente tenho uma frase que levo sempre na minha vida:<strong>  SE VOCÊ PODE SONHA-LO VOCÊ PODE FAZE-LO.</strong>
-            <p class="apresentacao__conteudo__paragrafo">Quando estava na faculdade desenvolvi um projeto(startup) chamada LOW TECK BIONICS onde desenvolvi uma protese eletrica de baixo custo 90% impressa em 3d. Com esse projeto fiquei em terceiro lugar no concurso Santander Universidades</p>
+            </p>
         </section>
         <img class="foto" src="./assets/foto.jpg" alt="foto do joao candido">
     </main>
