--- a/index.html
+++ b/index.html
@@ -18,33 +18,33 @@
     </header>
     <main class="apresentacao2">
         <div class="apresentacao2__conteudo">
-            <h1 class="apresentacao__conteudo__titulo">Apresentação dos projetos de estudo</h1>
+            <h1 class="apresentacao__conteudo__titulo"> Projetos que desenvolvi ....</h1>
             <div class="container">
                 <div class="projetos">
                     <img class="tamanho__foto" src="assets/jogo-ia.png" alt="">
                 </div>
                 <div class="projetos">
-                    <img class="tamanho__foto" src="assets/tabuada_for.png" alt="">
+                    <img class="tamanho__foto" src="assets/loading.avif" alt="">
                 </div>
                 <div class="projetos">
-                    <img class="tamanho__foto" src="assets/tabuada_for.png" alt="">
+                    <img class="tamanho__foto" src="assets/loading.avif" alt="">
                 </div>
                 <div class="projetos">
-                    <img class="tamanho__foto" src="assets/tabuada_for.png" alt="">
+                    <img class="tamanho__foto" src="assets/loading.avif" alt="">
                 </div>
             </div>
             <div class="container">
                 <div class="projetos">
-                    <img class="tamanho__foto" src="assets/tabuada_for.png" alt="">
+                    <img class="tamanho__foto" src="assets/loading.avif" alt="">
                 </div>
                 <div class="projetos">
-                    <img class="tamanho__foto" src="assets/tabuada_for.png" alt="">
+                    <img class="tamanho__foto" src="assets/loading.avif" alt="">
                 </div>
                 <div class="projetos">
-                    <img class="tamanho__foto" src="assets/tabuada_for.png" alt="">
+                    <img class="tamanho__foto" src="assets/loading.avif" alt="">
                 </div>
                 <div class="projetos">
-                    <img class="tamanho__foto" src="assets/tabuada_for.png" alt="">
+                    <img class="tamanho__foto" src="assets/loading.avif" alt="">
                 </div>
             </div>
         </div>  
