--- a/index.html
+++ b/index.html
@@ -21,7 +21,16 @@
             <h1 class="apresentacao__conteudo__titulo"> Projetos que desenvolvi ....</h1>
             <div class="container">
                 <div class="projetos">
-                    <img class="tamanho__foto" src="assets/jogo-ia.png" alt="">
+                    <a href="https://jogo-do-numero-secreto-sable-theta.vercel.app/">
+                        <img class="tamanho__foto" src="assets/jogo-ia.png" alt="">
+                    </a>
+                    <div class="apresentacao__conteudo__links">
+                        <h2 class="apresentacao__conteudo__links__subtitulo">Acesse o projeto :</h2>
+                        <a class="apresentacao__conteudo__links__link" href="https://github.com/joaobcandido/jogo-do-numero-secreto">
+                            <img src="./assets/github.png" alt="linkedin">
+                            Github
+                        </a>
+                    </div>
                 </div>
                 <div class="projetos">
                     <img class="tamanho__foto" src="assets/loading.avif" alt="">
