--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Portifolio</title>
+    <title>Home</title>
     <link rel="stylesheet" href="./styles/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -18,7 +18,7 @@
     </header>
     <main class="apresentacao2">
         <div class="apresentacao2__conteudo">
-            <h1 class="apresentacao__conteudo__titulo"> Projetos que desenvolvi ....</h1>
+            <h1 class="apresentacao__conteudo__titulo"> Apresentação dos Projetos </h1>
             <div class="container">
                 <div class="projetos">
                     <a href="https://jogo-do-numero-secreto-sable-theta.vercel.app/">
