added score search project

--- a/index.html
+++ b/index.html
@@ -33,12 +33,12 @@
                     </div>
                 </div>
                 <div class="projetos">
-                    <a href="">
-                        <img class="tamanho__foto" src="assets/loading.avif" alt="">
+                    <a href="https://score-search.vercel.app/">
+                        <img class="tamanho__foto" src="assets/score.png" alt="">
                     </a>
                     <div class="apresentacao__conteudo__links">
                         <h2 class="apresentacao__conteudo__links__subtitulo">Acesse o projeto :</h2>
-                        <a class="apresentacao__conteudo__links__link" href="">
+                        <a class="apresentacao__conteudo__links__link" href="https://github.com/joaobcandido/score-search">
                             <img src="./assets/github.png" alt="linkedin">
                             Github
                         </a>
