--- a/index.html
+++ b/index.html
@@ -21,18 +21,6 @@
             <h1 class="apresentacao__conteudo__titulo"> Apresentação dos Projetos </h1>
             <div class="container">
                 <div class="projetos">
-                    <a href="https://jogo-do-numero-secreto-sable-theta.vercel.app/">
-                        <img class="tamanho__foto" src="assets/jogo-ia.png" alt="">
-                    </a>
-                    <div class="apresentacao__conteudo__links">
-                        <h2 class="apresentacao__conteudo__links__subtitulo">Acesse o projeto :</h2>
-                        <a class="apresentacao__conteudo__links__link" href="https://github.com/joaobcandido/jogo-do-numero-secreto">
-                            <img src="./assets/github.png" alt="linkedin">
-                            Github
-                        </a>
-                    </div>
-                </div>
-                <div class="projetos">
                     <a href="https://score-search.vercel.app/">
                         <img class="tamanho__foto" src="assets/score.png" alt="">
                     </a>
@@ -44,6 +32,7 @@
                         </a>
                     </div>
                 </div>
+                
                 <div class="projetos">
                     <a href="">
                         <img class="tamanho__foto" src="assets/loading.avif" alt="">
@@ -56,6 +45,20 @@
                         </a>
                     </div>
                 </div>
+
+                <div class="projetos">
+                    <a href="">
+                        <img class="tamanho__foto" src="assets/loading.avif" alt="">
+                    </a>
+                    <div class="apresentacao__conteudo__links">
+                        <h2 class="apresentacao__conteudo__links__subtitulo">Acesse o projeto :</h2>
+                        <a class="apresentacao__conteudo__links__link" href="">
+                            <img src="./assets/github.png" alt="linkedin">
+                            Github
+                        </a>
+                    </div>
+                </div>
+
                 <div class="projetos">
                     <a href="">
                         <img class="tamanho__foto" src="assets/loading.avif" alt="">
@@ -69,7 +72,10 @@
                     </div>
                 </div>
             </div>
+
+
             <div class="container">
+
                 <div class="projetos">
                     <a href="">
                         <img class="tamanho__foto" src="assets/loading.avif" alt="">
@@ -82,6 +88,7 @@
                         </a>
                     </div>
                 </div>
+
                 <div class="projetos">
                     <a href="">
                         <img class="tamanho__foto" src="assets/loading.avif" alt="">
@@ -94,6 +101,7 @@
                         </a>
                     </div>
                 </div>
+
                 <div class="projetos">
                     <a href="">
                         <img class="tamanho__foto" src="assets/loading.avif" alt="">
@@ -106,6 +114,7 @@
                         </a>
                     </div>
                 </div>
+
                 <div class="projetos">
                     <a href="">
                         <img class="tamanho__foto" src="assets/loading.avif" alt="">
@@ -118,6 +127,7 @@
                         </a>
                     </div>
                 </div>
+
             </div>
         </div>  
     </main>
