improving the text about me

--- a/about.html
+++ b/about.html
@@ -21,9 +21,18 @@
             <p class="apresentacao__conteudo__paragrafo">Eu era um agricultor familiar e com 39 anos sofri um acidente de moto e tive a amputação do pé direito, no processo de recuperação conheci uma faculdade pública do Estado de São Paulo UNIVESP e comecei meu curso universitário, com 45 anos concluí o curso de Bacharelado em Engenharia de Computação.</p>
 
             <p class="apresentacao__conteudo__paragrafo">
-                Tive meu primeiro emprego na area de TI como desenvolvedor Back end na linguagem de programação golang com 45 anos em uma multinacional ,onde participava de uma equipe no Uruguay e com isso aprendi um pouco do idioma casteliano.
+                Tive minha primeira experiência na área de TI em uma multinacional onde trabalhei como backend developer com a linguagem de programação Golang,também tive a oportunidade de trabalhar em uma equipe do Uruguai que só falava castelhano, então aprendi um pouco do idioma.
+  
             </p>
-            
+            <p class="apresentacao__conteudo__paragrafo">
+                Nessa empresa tive a oportunidade de executar testes unitários , testes funcionais e aprender sobre metodologias ágeis utilizando o Jira no dia a dia. também estive em contato com ferramentas de CI/CD como o Jenkins , ferramentas de versionamento como o Git, ferramentas de teste como o Postman e ferramentas de observabilidade como o Datadog e o Kibana. 
+            </p>
+            <p class="apresentacao__conteudo__paragrafo">
+                Atualmente estou começando uma formação na linguagem c# na plataforma da Alura.
+            </p>
+            <p class="apresentacao__conteudo__paragrafo">
+                Para melhorar meus conhecimentos em HTML CSS e JS estou montando esse portfolio com alguns projetos que estou desenvolvendo .
+            </p>
             <p class="apresentacao__conteudo__paragrafo">Quando estava na faculdade desenvolvi um projeto(startup) chamada LOW TECK BIONICS onde desenvolvi uma protese eletrica de baixo custo 90% impressa em 3d. Com esse projeto fiquei em terceiro lugar no concurso Santander Universidades.</p>
 
             <p class="apresentacao__conteudo__paragrafo">
