added agile methodologies project with jira

--- a/index.html
+++ b/index.html
@@ -47,12 +47,12 @@
                 </div>
 
                 <div class="projetos">
-                    <a href="">
-                        <img class="tamanho__foto" src="assets/loading.avif" alt="">
+                    <a href="https://joanjb56.atlassian.net/jira/software/c/projects/PDO/boards/67/backlog">
+                        <img class="tamanho__foto" src="assets/jira.png" alt="">
                     </a>
                     <div class="apresentacao__conteudo__links">
                         <h2 class="apresentacao__conteudo__links__subtitulo">Acesse o projeto :</h2>
-                        <a class="apresentacao__conteudo__links__link" href="">
+                        <a class="apresentacao__conteudo__links__link" href="https://github.com/joaobcandido/projeto-jira/blob/main/README.md">
                             <img src="./assets/github.png" alt="linkedin">
                             Github
                         </a>
