added CV download button

--- a/about.html
+++ b/about.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sobre mim</title>
     <link rel="stylesheet" href="./styles/style.css">
+    <script src="app.js"></script>
 </head>
 <body>
     <header class="cabecalho">
@@ -51,6 +52,10 @@
                     <img src="./assets/github.png" alt="github">
                     Github
                 </a>
+                <button onclick="downloadCV()" class="apresentacao__conteudo__links__link__cv"  >
+                Baixar CV
+                </button>
+                
             </div>
         </section>
         <img class="foto" src="./assets/foto.jpg" alt="foto do joao candido">
