--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
                     </a>
                     <div class="apresentacao__conteudo__links">
                         <h2 class="apresentacao__conteudo__links__subtitulo">Acesse o código : </h2>
-                        <a class="apresentacao__conteudo__links__link" href="https://github.com/joaobcandido/Desafios/blob/main/src/SistemaBancario.java">
+                        <a class="apresentacao__conteudo__links__link" href="https://github.com/joaobcandido/Desafios/tree/main/src/br/com/joao/sistemabancario">
                             <img src="./assets/github.png" alt="linkedin">
                             Github
                         </a>
